main.tf
resource "aws_security_group" "alb_sec_group" {
  name = "alb-sec-group_demo"
  description = "Security Group for the ELB (ALB)"
  egress {
    from_port = 0
    protocol = "-1"
    to_port = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 80
    protocol = "tcp"
    to_port = 80
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 443
    protocol = "tcp"
    to_port = 443
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "asg_sec_group" {
  name = "asg_sec_group"
  description = "Security Group for the ASG"
  
  tags = {
    name = "sg_demo"
  }
  // outbound 
  egress {
    from_port = 0
    protocol = "-1" // ALL Protocols
    to_port = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
  // inbound
  ingress {
    from_port = 80
    protocol = "tcp"
    to_port = 80
    security_groups = [aws_security_group.alb_sec_group.id]
  }
  ingress {
    from_port = 22
    protocol = "tcp"
    to_port = 22
    cidr_blocks = ["0.0.0.0/0"]
  }
}
resource "aws_launch_configuration" "ec2_template" {
  image_id = var.image_id
  instance_type = var.flavor
  key_name = "virginiakey"
  associate_public_ip_address = var.associate_public_ip_address
  user_data = <<-EOF
            #!/bin/bash
            sudo yum -y update
            sudo yum -y install httpd
            sudo echo "Auto_scaling demo page" > /var/www/html/index.html
            sudo systemctl start httpd
            sudo systemctl enable httpd
            EOF
  security_groups = [aws_security_group.asg_sec_group.id]
lifecycle {
    create_before_destroy = true
  }
}

data "aws_vpc" "default" {
  default = true
}
data "aws_subnets" "default" {
  
}

#creating asg

resource "aws_autoscaling_group" "asg_tutorial" {
  max_size = 3
  min_size = 2
  launch_configuration = aws_launch_configuration.ec2_template.name
  health_check_grace_period = 300
  
  
  health_check_type = "ELB"
  
  vpc_zone_identifier = data.aws_subnets.default.ids
  
  target_group_arns = [aws_lb_target_group.asg.arn]
  
  tag {
    key = "day1_asg"
    propagate_at_launch = false
    value = "day1_asg"
  }
  lifecycle {
  create_before_destroy = true
  }
}
resource "aws_lb" "ELB" {
  name               = "terraform-asg-example"
  load_balancer_type = "application"

subnets  = data.aws_subnets.default.ids
  security_groups = [aws_security_group.alb_sec_group.id]
}
resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.ELB.arn
  port = 80
  protocol = "HTTP"
  
  
  default_action {
    type = "fixed-response"
    fixed_response {
      content_type = "text/plain"
      message_body = "404: page not found"
      status_code  = 404
    }
  }
}

resource "aws_lb_target_group" "asg" {
  name = "asg-example"
  port = var.ec2_instance_port
  protocol = "HTTP"
  vpc_id = data.aws_vpc.default.id

  health_check {
    path = "/"
    protocol = "HTTP"
    matcher = "200"
    interval = 15
    timeout = 3
    healthy_threshold = 2
    unhealthy_threshold = 2
  }
}
resource "aws_cloudwatch_metric_alarm" "this" { 
    alarm_name          = "alb-alarams"
    alarm_description   = "unhealthy"
    comparison_operator = "GreaterThanOrEqualToThreshold"
    evaluation_periods  = 1
    threshold           = 1
    period              = 60
    unit                = "Count"
    namespace   = "AWS/ApplicationELB"
    metric_name = "UnHealthyHostCount"
    statistic   = "Sum"
    alarm_actions = ["arn:aws:sns:us-east-1:815421850354:mail"]
    
    
    dimensions = {
       TargetGroup = aws_lb_target_group.asg.arn_suffix
       LoadBalancer = aws_lb.ELB.arn_suffix
   }   
}
resource "aws_autoscaling_notification" "mail_notifications" {
  group_names = [
    aws_autoscaling_group.asg_tutorial.name,
  ]

  notifications = [
    "autoscaling:EC2_INSTANCE_LAUNCH",
    "autoscaling:EC2_INSTANCE_TERMINATE",
    "autoscaling:EC2_INSTANCE_LAUNCH_ERROR",
    "autoscaling:EC2_INSTANCE_TERMINATE_ERROR",
  ]

  topic_arn = "arn:aws:sns:us-east-1:815421850354:mail"
}
resource "aws_lb_listener_rule" "asg" {
  listener_arn = aws_lb_listener.http.arn
  priority = 100

  action {
    type = "forward"
    target_group_arn = aws_lb_target_group.asg.arn
  }
  condition {
    path_pattern {
      values = ["*"]
    }
  }
}
